--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/recyclerViewCoins"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:listitem="@layout/coin_info_item"
-    tools:context=".CoinListInfoActivity">
+    tools:context=".presentation.CoinListInfoActivity"
+    tools:layout="@layout/fragment_coin_list_info">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewCoinList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
-
-</androidx.recyclerview.widget.RecyclerView>
+</androidx.constraintlayout.widget.ConstraintLayout>
