--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,9 +7,11 @@
     tools:context=".presentation.CoinListInfoActivity"
     tools:layout="@layout/fragment_coin_list_info">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewCoinList"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragmentContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:name="com.example.cryptoapp.presentation.CoinListInfoFragment"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
